--- a/override.css
+++ b/override.css
@@ -210,12 +210,22 @@ h4 {
   opacity: 0.5 !important;
 }
 
+.btn-outline-primary {
+  color: #fff !important;
+  background-color: #00af87 !important;
+  background-image: none !important;
+}
+
 .dropleft > .dropdown-menu {
   width: 200px !important;
   box-shadow: 0px 20px 20px 9px #000 !important;
   background-color: rgb(25, 39, 52) !important;
   border: 1px solid #000 !important;
   padding: 15px !important;
+}
+
+dropdown-item:hover {
+  color: #16181b !important;
 }
 
 small {
