--- a/override.css
+++ b/override.css
@@ -224,7 +224,7 @@ h4 {
   padding: 15px !important;
 }
 
-dropdown-item:hover {
+.nav-item dropdown-item:hover {
   color: #16181b !important;
 }
 
@@ -263,5 +263,5 @@ nav.bg-dark {
 }
 
 #footer {
-  background-color: #151e27;
+  background-color: #151e27 !important;
 }
