--- a/override.css
+++ b/override.css
@@ -105,7 +105,7 @@ td:first-child {
 }
 
 td:nth-child(2) {
-  color: #00af87 !important;
+  color: #d9235c !important;
   opacity: 0.8 !important;
 }
 
