--- a/override.css
+++ b/override.css
@@ -1,13 +1,13 @@
 html,
 body,
-.main {
+main {
   background-color: #151e27 !important;
   font: 14px system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Ubuntu, 'Helvetica Neue', sans-serif !important;
 }
 
 #main {
-  padding: 60px !important;
+  padding: 20px 60px 60px 60px!important;
 }
 
 .progress {
@@ -25,6 +25,20 @@ body,
 .bg-danger span {
   font-weight: bold !important;
   color: #f3f4f4 !important;
+}
+
+img.mr-3 {
+  margin-top: -.3rem !important;
+}
+.navbar-brand {
+  color: transparent !important;  
+}
+
+.navbar-brand::after {
+  color: #d9235c !important;
+  font-weight: 500 !important;
+  margin-left: -12rem !important;
+  content: 'Self Service Deploy (woh)'
 }
 
 span[data-toggle] {
@@ -48,6 +62,7 @@ span[data-toggle] .text-danger::after {
   font-weight: 900 !important;
   margin-left: 0.5rem !important;
 }
+
 
 span > i {
   font-size: 16px !important;
@@ -105,13 +120,10 @@ td:first-child {
 }
 
 td:nth-child(2) {
-  color: #d9235c !important;
+  color: #00af87 !important;
   opacity: 0.8 !important;
 }
 
-td:nth-child(5) {
-  text-transform: capitalize !important;
-}
 
 td:nth-child(5) {
   text-transform: capitalize !important;
@@ -122,6 +134,11 @@ td:nth-child(6) {
   opacity: 0.8 !important;
   font-weight: bold !important;
   text-transform: uppercase !important;
+}
+
+td:nth-child(7) {
+  color: #d9235c;
+  text-transform: capitalize !important;
 }
 
 a {
@@ -229,10 +246,18 @@ h4 {
   color: #16181b !important;
 }
 
-.dropdown-item.active, .dropdown-item:active {
-  color: #fff;
-  text-decoration: none;
-  background-color: #212529;
+.dropdown-item:hover {
+  color: #16181b !important;
+  text-decoration: none !important;
+  color: #fff !important;
+  background-color: #d9235c !important;
+
+}
+
+.dropdown-item:active {
+  color: #16181b !important;
+  text-decoration: none !important;
+  background-color: #d9235c !important;
 }
 
 small {
@@ -272,3 +297,7 @@ nav.bg-dark {
 #footer {
   background-color: #151e27 !important;
 }
+
+/* ap-standard-form {
+  background-color: #d9235c !important;
+} */
